c4prj2_input/grade.txt
Grading at Wed Sep  5 00:22:41 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:62:40: error: invalid operands to binary * (have ‘size_t * {aka long unsigned int *}’ and ‘long unsigned int’)
     deck_ts = realloc(deck_ts, n_hands * sizeof(**deck_ts));
                                        ^
Compilation of input.c failed

Overall Grade: F
